kube/deploy-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-podinfo-dev
  namespace: a-benz-schalung
  labels:
    app: a-podinfo-dev
    version: dev
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: a-podinfo-dev
      version: dev
  template:
    metadata:
      labels:
        app: a-podinfo-dev
        version: dev
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: a-podinfo-dev
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - a-podinfo-dev
              topologyKey: kubernetes.io/hostname
      containers:
      - name: app-container
        image: ghcr.io/stefanprodan/podinfo
