kube/deploy-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-podinfo-prod
  namespace: a-benz-schalung
  labels:
    app: a-podinfo-prod
    version: prod
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: a-podinfo-prod
      version: prod
  template:
    metadata:
      labels:
        app: a-podinfo-prod
        version: prod
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: a-podinfo-prod
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - a-podinfo-prod
              topologyKey: kubernetes.io/hostname
      containers:
      - name: app-container
        image: ghcr.io/stefanprodan/podinfo
