kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-podinfo
  namespace: a-benz-schalung
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: a-podinfo
  template:
    metadata:
      labels:
        app: a-podinfo
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: a-podinfo
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - a-podinfo
              topologyKey: kubernetes.io/hostname
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: app-container
        image: ghcr.io/stefanprodan/podinfo
        volumeMounts:
        - name: mein-daten-volume
          mountPath: /data
      volumes:
      - name: mein-daten-volume
        persistentVolumeClaim:
          claimName: a-team-pvc-7
