kube/ingress-dev.yaml
# Ingress-Ressource für Podinfo
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress-dev
  namespace: a-benz-schalung
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: nginx
  rules:
  - host: podinfo.k8s.schoeppi5.de
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: a-podinfo-dev
            port:
              number: 80
      - path: /api/info
        pathType: Prefix
        backend:
          service:
            name: a-podinfo-prod
            port:
              number: 80
